# asimov-study-agno

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
guides/modules/one/: 0_llm_call.py  11_researcher.py  12._nalista.py  13_own_tools.py  21_pdf_agent.py  31_memory.py  41_teams.py  pyproject.toml
guides/modules/three/: pyproject.toml
guides/modules/three/00_introducao/: exemplo1.py  exemplo2.py
guides/modules/three/01_deploy/: exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py
guides/modules/two/: 12_analista.py  14_analista.py  15_analista.py  16_analista.py  17_team_analista.py  pyproject.toml
guides/modules/two/tmp/: data.db
guides/modules/two/tmp/chromadb/: chroma.sqlite3
src/: 0.llm_call.py  1.1.researcher.py  1.2.analist.py  1.3.own_tools.py  1.5.rag.py  1.6.team.py  my_os.py
src/one/: 1.4.analist_context.py
src/one/agent-ui/: package-lock.json
