[project]
name = "agno-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.2.13",
    "fastapi>=0.121.2",
    "groq>=0.34.1",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "tavily-python>=0.7.13",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
