[project]
name = "modulo3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.0.11",
    "chromadb>=1.1.0",
    "fastapi>=0.118.0",
    "openai>=1.109.1",
    "pypdf>=6.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
]
