[project]
name = "criando-agentes-de-ia-com-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agno>=2.1.2",
    "chromadb>=1.1.1",
    "ddgs>=9.6.1",
    "fastapi>=0.118.1",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "pypdf>=6.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
]
